--- a/finamer/cloudBridges-dev.properties
+++ b/finamer/cloudBridges-dev.properties
@@ -6,9 +6,9 @@ java.awt.headless=true
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=reactive
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/TailorwRealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
 
 # Para usar SMTP
 #spring.profiles.active=smtp
@@ -20,7 +20,7 @@ spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw
 mailjet.apiKey=${MAILJET_KEY}
 mailjet.apiSecret=${MAILJET_SECRET}
 
-# DirecciÛn de correo electrÛnico y nombre desde donde se enviar·n los correos
+# Direcci√≥n de correo electr√≥nico y nombre desde donde se enviar√°n los correos
 mailjet.fromEmail=it@ublik.net
 mailjet.fromName=KYNSOFT
 
