--- a/finamer/identity-dev.properties
+++ b/finamer/identity-dev.properties
@@ -5,9 +5,9 @@ spring.codec.max-in-memory-size=2MB
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/TailorwRealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
 
 #datasource
 spring.jpa.database=default
@@ -62,14 +62,14 @@ payment.service.port=8080
 
 
 # Keycloak Configuration
-keycloak.provider.server-url=https://authqa.tailorw.net/
+keycloak.provider.server-url=https://authdev.tailorw.net/
 keycloak.provider.realm-name=TailorwRealm
 keycloak.provider.realm-master=master
 keycloak.provider.admin-clic=admin-cli
 keycloak.provider.user-console=admin
-keycloak.provider.password-console=4d9d1a2e403549b4ae21a8aafd2bebd7
+keycloak.provider.password-console=b65d2efd242f458794b84826d183c293
 keycloak.provider.client-id=login-app
-keycloak.provider.client-secret=GYLCmMVxMomMDjqlpBa2fnFeQlXhuBn5
+keycloak.provider.client-secret=c2IcfkbsS4q2K3iFRp1YELUBrabpDzGz
 keycloak.provider.grant_type=password
 keycloak.provider.default-role=SISTEMA
 
