--- a/finamer/report-dev.properties
+++ b/finamer/report-dev.properties
@@ -5,9 +5,9 @@ server.servlet.context-path=/
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=reactive
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/TailorwRealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
 
 #datasource
 spring.jpa.database=default
