--- a/finamer/identity-dev.properties
+++ b/finamer/identity-dev.properties
@@ -71,7 +71,7 @@ keycloak.provider.password-console=b65d2efd242f458794b84826d183c293
 keycloak.provider.client-id=login-app
 keycloak.provider.client-secret=c2IcfkbsS4q2K3iFRp1YELUBrabpDzGz
 keycloak.provider.grant_type=password
-keycloak.provider.default-role=SISTEMA
+keycloak.provider.default-role=ADMIN
 
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
