--- a/finamer/identity.properties
+++ b/finamer/identity.properties
@@ -74,7 +74,7 @@ keycloak.provider.password-console=4d9d1a2e403549b4ae21a8aafd2bebd7
 keycloak.provider.client-id=login-app
 keycloak.provider.client-secret=GYLCmMVxMomMDjqlpBa2fnFeQlXhuBn5
 keycloak.provider.grant_type=password
-keycloak.provider.default-role=SISTEMA
+keycloak.provider.default-role=ADMIN
 
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
