--- a/finamer/gateway-dev.properties
+++ b/finamer/gateway-dev.properties
@@ -63,3 +63,11 @@ payment.service.host=payment
 payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
+
+#KAFKA
+KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+
+# Configuración específica para el perfil dev
+KAFKA_SASL_USERNAME=user1
+KAFKA_SASL_PASSWORD=AkC7B1ooWO
