--- a/finamer/settings-dev.properties
+++ b/finamer/settings-dev.properties
@@ -60,3 +60,12 @@ payment.service.host=payment
 payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
+
+
+# Configuración común
+KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
+KAFKA_GROUP_ID=group-id
+
+# Configuración específica para el perfil dev
+KAFKA_SASL_USERNAME=user1
+KAFKA_SASL_PASSWORD=AkC7B1ooWO
