--- a/finamer/identity-qa.properties
+++ b/finamer/identity-qa.properties
@@ -5,9 +5,9 @@ spring.codec.max-in-memory-size=2MB
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/Erp
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/token
 
 #datasource
 spring.jpa.database=default
@@ -63,15 +63,15 @@ payment.service.port=8080
 
 # Keycloak Configuration
 keycloak.provider.server-url=https://authqa.tailorw.net/
-keycloak.provider.realm-name=TailorwRealm
+keycloak.provider.realm-name=Erp
 keycloak.provider.realm-master=master
 keycloak.provider.admin-clic=admin-cli
 keycloak.provider.user-console=admin
-keycloak.provider.password-console=4d9d1a2e403549b4ae21a8aafd2bebd7
+keycloak.provider.password-console=953143d7f0eb413b9509c7415a0432e2
 keycloak.provider.client-id=login-app
-keycloak.provider.client-secret=GYLCmMVxMomMDjqlpBa2fnFeQlXhuBn5
+keycloak.provider.client-secret=jEFKOd8tuRw94hMIAUIv7FkUe4F4pOCM
 keycloak.provider.grant_type=password
-keycloak.provider.default-role=SISTEMA
+keycloak.provider.default-role=ADMIN
 
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
