--- a/finamer/settings-qa.properties
+++ b/finamer/settings-qa.properties
@@ -5,9 +5,9 @@ spring.codec.max-in-memory-size=2MB
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/Erp
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/token
 
 
 #datasource
