--- a/finamer/gateway-qa.properties
+++ b/finamer/gateway-qa.properties
@@ -6,9 +6,9 @@ server.servlet.context-path=/
 spring.application.name=gateway
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authqa.tailorw.net/realms/Erp
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authqa.tailorw.net/realms/Erp/protocol/openid-connect/token
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Request-Method Access-Control-Allow-Origin Access-Control-Request-Headers, RETAIN_UNIQUE
 spring.cloud.gateway.httpclient.disable-content-security=true
