--- a/finamer/cloudBridges-dev.properties
+++ b/finamer/cloudBridges-dev.properties
@@ -6,9 +6,9 @@ java.awt.headless=true
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=reactive
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/Erp
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/Erp/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/Erp/protocol/openid-connect/token
 
 # Para usar SMTP
 #spring.profiles.active=smtp
