--- a/finamer/identity-dev.properties
+++ b/finamer/identity-dev.properties
@@ -5,9 +5,9 @@ spring.codec.max-in-memory-size=2MB
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/TailorwRealm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/TailorwRealm/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://authdev.tailorw.net/realms/Erp
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://authdev.tailorw.net/realms/Erp/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.token-uri=https://authdev.tailorw.net/realms/Erp/protocol/openid-connect/token
 
 #datasource
 spring.jpa.database=default
@@ -63,15 +63,28 @@ payment.service.port=8080
 
 # Keycloak Configuration
 keycloak.provider.server-url=https://authdev.tailorw.net/
-keycloak.provider.realm-name=TailorwRealm
+keycloak.provider.realm-name=Erp
 keycloak.provider.realm-master=master
 keycloak.provider.admin-clic=admin-cli
 keycloak.provider.user-console=admin
-keycloak.provider.password-console=b65d2efd242f458794b84826d183c293
+keycloak.provider.password-console=dd6bcd2e9ccc488c8048e81c30196125
 keycloak.provider.client-id=login-app
-keycloak.provider.client-secret=c2IcfkbsS4q2K3iFRp1YELUBrabpDzGz
+keycloak.provider.client-secret=MyaXWiB2w5EpADndgsk6PgGBt3ffYovX
 keycloak.provider.grant_type=password
 keycloak.provider.default-role=ADMIN
+
+#Identity Params
+identity.usersystem.id=d0e43c35-3762-426b-8edb-49a6680ef93b
+identity.usersystem.email=admin@tailorw.com
+identity.usersystem.username=admin@tailorw.com
+identity.usersystem.name=Admin
+identity.usersystem.lastName=Tailorw
+identity.business.id=41833c25-5ca2-41cd-b22f-8488723097da
+identity.business.name=ERP
+identity.business.description=FinaErp
+identity.business.logoUrl=https://static.kynsoft.net/bizum_2024-05-13_12-35-00.png
+identity.business.ruc=111111111
+identity.business.address=RD
 
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
