--- a/finamer/identity-qa.properties
+++ b/finamer/identity-qa.properties
@@ -73,5 +73,18 @@ keycloak.provider.client-secret=jEFKOd8tuRw94hMIAUIv7FkUe4F4pOCM
 keycloak.provider.grant_type=password
 keycloak.provider.default-role=ADMIN
 
+#Identity Params
+identity.usersystem.id=2b3f17e1-8149-428b-a2ce-8b660a79e007
+identity.usersystem.email=admin@tailorw.com
+identity.usersystem.username=admin@tailorw.com
+identity.usersystem.name=Admin
+identity.usersystem.lastName=Tailorw
+identity.business.id=41833c25-5ca2-41cd-b22f-8488723097da
+identity.business.name=ERP
+identity.business.description=FinaErp
+identity.business.logoUrl=https://static.kynsoft.net/bizum_2024-05-13_12-35-00.png
+identity.business.ruc=111111111
+identity.business.address=RD
+
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
