--- a/finamer/payment-qa.properties
+++ b/finamer/payment-qa.properties
@@ -59,3 +59,19 @@ payment.service.host=payment
 payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
+
+#KAFKA
+KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+
+# Configuración específica para el perfil dev
+KAFKA_SASL_USERNAME=user1
+KAFKA_SASL_PASSWORD=AkC7B1ooWO
+
+payment.source.expense.code=${PAYMENT_SOURCE_EXP_CODE:EXP}
+payment.source.bank.code=${PAYMENT_SOURCE_BANK_CODE:BK}
+payment.status.confirm.code=${PAYMENT_STATUS_CONF_CODE:CONF}
+payment.file.service.url=${PAYMENT_FILE_SERVICE_URL:http://cloudbridges.finamer.svc.cluster.local:9909/api/files}
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
