--- a/finamer/gateway-dev.properties
+++ b/finamer/gateway-dev.properties
@@ -68,6 +68,11 @@ payment.service.port=8080
 KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
-# Configuración específica para el perfil dev
+# Configuracion especifica para el perfil dev
 KAFKA_SASL_USERNAME=user1
 KAFKA_SASL_PASSWORD=AkC7B1ooWO
+# application.properties
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
