--- a/finamer/identity-dev.properties
+++ b/finamer/identity-dev.properties
@@ -88,3 +88,5 @@ identity.business.address=RD
 
 # Google Configuration
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
+
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
