--- a/finamer/settings-dev.properties
+++ b/finamer/settings-dev.properties
@@ -69,3 +69,4 @@ KAFKA_GROUP_ID=group-id
 # Configuración específica para el perfil dev
 KAFKA_SASL_USERNAME=user1
 KAFKA_SASL_PASSWORD=AkC7B1ooWO
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
