--- a/finamer/creditCard-dev.properties
+++ b/finamer/creditCard-dev.properties
@@ -59,3 +59,14 @@ payment.service.host=payment
 payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
+
+#KAFKA
+KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+
+# Configuracion especifica para el perfil dev
+KAFKA_SASL_USERNAME=user1
+KAFKA_SASL_PASSWORD=AkC7B1ooWO
+
+
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
