--- a/finamer/payment-dev.properties
+++ b/finamer/payment-dev.properties
@@ -1,7 +1,7 @@
 # Server Configuration
-server.port=9909
+server.port=8097
 server.servlet.context-path=/
-spring.codec.max-in-memory-size=2MB
+spring.codec.max-in-memory-size=50MB
 # Spring Application
 spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=REACTIVE
@@ -60,6 +60,7 @@ payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
 
+
 #KAFKA
 KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
@@ -75,3 +76,5 @@ payment.file.service.url=${PAYMENT_FILE_SERVICE_URL:http://cloudbridges.finamer.
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
