--- a/finamer/report-qa.properties
+++ b/finamer/report-qa.properties
@@ -69,3 +69,5 @@ aws.bucketName=medinec
 aws.region =us-east-2
 aws.cloudfront.domain=http://d2cebw6tssfqem.cloudfront.net/
 spring.datasource.initialization-mode=always
+
+report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
