--- a/finamer/identity-qa.properties
+++ b/finamer/identity-qa.properties
@@ -90,3 +90,11 @@ identity.business.address=RD
 google.client-id=945296493767-ic6omj9ke4o76n11k71eq0trap4lu6r0.apps.googleusercontent.com
 
 report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
+
+#KAFKA
+KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+
+# Configuración específica para el perfil dev
+KAFKA_SASL_USERNAME=user1
+KAFKA_SASL_PASSWORD=AkC7B1ooWO
