--- a/finamer/settings-qa.properties
+++ b/finamer/settings-qa.properties
@@ -63,8 +63,8 @@ payment.service.port=8080
 
 
 # Configuracion comun
-KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
-KAFKA_GROUP_ID=group-id
+KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
 # Configuracion especifica para el perfil dev
 KAFKA_SASL_USERNAME=user1
