--- a/finamer/settings-qa.properties
+++ b/finamer/settings-qa.properties
@@ -61,10 +61,9 @@ payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
 
-
-# Configuracion comun
-KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
-KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+# Configuración común
+KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
+KAFKA_GROUP_ID=group-id
 
 # Configuracion especifica para el perfil dev
 KAFKA_SASL_USERNAME=user1
