--- a/finamer/payment-qa.properties
+++ b/finamer/payment-qa.properties
@@ -60,10 +60,9 @@ payment.service.client-id=669ed63c-5af0-4afc-a45c-9f1369f58cfb
 payment.service.expiration=15
 payment.service.port=8080
 
-
 #KAFKA
-KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
-KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
+KAFKA_GROUP_ID=group-id
 
 # Configuracion especifica para el perfil dev
 KAFKA_SASL_USERNAME=user1
