--- a/finamer/settings-qa.properties
+++ b/finamer/settings-qa.properties
@@ -62,7 +62,7 @@ payment.service.expiration=15
 payment.service.port=8080
 
 # Configuración común
-KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
+KAFKA_BOOTSTRAP_ADDRESS=kafka.kafka.svc.cluster.local:9092
 KAFKA_GROUP_ID=group-id
 
 # Configuracion especifica para el perfil dev
