--- a/finamer/payment-qa.properties
+++ b/finamer/payment-qa.properties
@@ -61,7 +61,7 @@ payment.service.expiration=15
 payment.service.port=8080
 
 #KAFKA
-KAFKA_BOOTSTRAP_ADDRESS=localhost:9092
+KAFKA_BOOTSTRAP_ADDRESS=kafka.kafka.svc.cluster.local:9092
 KAFKA_GROUP_ID=group-id
 
 # Configuracion especifica para el perfil dev
