--- a/finamer/payment-qa.properties
+++ b/finamer/payment-qa.properties
@@ -65,8 +65,8 @@ KAFKA_BOOTSTRAP_ADDRESS=kafka.kafka.svc.cluster.local:9092
 KAFKA_GROUP_ID=group-id
 
 # Configuracion especifica para el perfil dev
-KAFKA_SASL_USERNAME=user1
-KAFKA_SASL_PASSWORD=AkC7B1ooWO
+#KAFKA_SASL_USERNAME=user1
+#KAFKA_SASL_PASSWORD=AkC7B1ooWO
 
 payment.source.expense.code=${PAYMENT_SOURCE_EXP_CODE:EXP}
 payment.source.bank.code=${PAYMENT_SOURCE_BANK_CODE:BK}
