--- a/finamer/creditCard-qa.properties
+++ b/finamer/creditCard-qa.properties
@@ -64,9 +64,9 @@ payment.service.port=8080
 KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
-# Configuracon especifica para el perfil dev
-KAFKA_SASL_USERNAME=user1
-KAFKA_SASL_PASSWORD=AkC7B1ooWO
+# Configuracion especifica para el perfil dev
+#KAFKA_SASL_USERNAME=user1
+#KAFKA_SASL_PASSWORD=AkC7B1ooWO
 
 
 report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
