--- a/finamer/gateway-qa.properties
+++ b/finamer/gateway-qa.properties
@@ -69,8 +69,8 @@ KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
 # Configuracion especifica para el perfil dev
-KAFKA_SASL_USERNAME=user1
-KAFKA_SASL_PASSWORD=AkC7B1ooWO
+#KAFKA_SASL_USERNAME=user1
+#KAFKA_SASL_PASSWORD=AkC7B1ooWO
 
 # application.properties
 spring.servlet.multipart.max-file-size=50MB
