--- a/finamer/identity-qa.properties
+++ b/finamer/identity-qa.properties
@@ -95,6 +95,6 @@ report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/gene
 KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
-# Configuración específica para el perfil dev
-KAFKA_SASL_USERNAME=user1
-KAFKA_SASL_PASSWORD=AkC7B1ooWO
+# Configuracion especifica para el perfil dev
+#KAFKA_SASL_USERNAME=user1
+#KAFKA_SASL_PASSWORD=AkC7B1ooWO
