--- a/finamer/invoicing-qa.properties
+++ b/finamer/invoicing-qa.properties
@@ -65,7 +65,7 @@ KAFKA_BOOTSTRAP_ADDRESS=${KAFKA_BOOTSTRAP_ADDRESS}
 KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
 
 # Configuracion especifica para el perfil dev
-KAFKA_SASL_USERNAME=user1
-KAFKA_SASL_PASSWORD=AkC7B1ooWO
+#KAFKA_SASL_USERNAME=user1
+#KAFKA_SASL_PASSWORD=AkC7B1ooWO
 
 report.service.url=http://report.finamer.svc.cluster.local:9908/api/reports/generate-template
